# tde_catalogue

./: .coveragerc  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: continous_integration.yml
tde_catalogue/: __init__.py  catalogue.py
tde_catalogue/compilation/: compiler.py
tde_catalogue/data/: README.md  __init__.py
tde_catalogue/data/mir_flares/: __init__.py  combined_parent_sample.py  download_news_lightcurves.py  make_news_sample.py  news_parent_sample.py  news_wise_data.py  panstarrs_parent_sample.py  parent_sample.py  sdss_parnet_sample.py  sdss_photometric_galaxies.py  timewise_desycluster.sh  wise_data.py
tde_catalogue/data/open_tde_catalogue/: README.md  TheOpenTDECatalog.csv  __init__.py
tde_catalogue/data/tns/: README.md  __init__.py  tns_search.csv
tde_catalogue/utils/: mirong_sample.py  panstarrs_utils.py  point_source_utils.py  sdss_utils.py  seventeen_ztf_tdes.py
tests/: test_1_test_compiler.py  test_2_test_mir_catalogue.py  test_2_test_panstarrs_parent_sample.py  test_3_test_flare_search.py  test_4_test_point_source_utils.py
