[tool.poetry]
name = "tde_catalogue"
version = "0.1.0"
description = ""
authors = ["Jannis Necker <jannis.necker@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
astropy = "^5.1"
coveralls = "^3.3.1"
jupyterlab = "^3.4.6"
scipy = "^1.9.1"
pandas = "^1.4.4"
matplotlib = "^3.6.3"
timewise = "^0.1.10"
casjobs = "^0.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
